# ProjectPL_DSA

./: CMakeLists.txt  README.md  main.c
Fase1/: fase1.c  fase1.h
Fase2/: fase2.c  fase2.h
data/: Jogo.txt  JogoBin.txt  matriz.txt  palavras.txt
libs_src/: lib_stats.c  lib_util.c
libs_src/sortarrays/: arraysort.c  arraysort.h
libs_src/strings/: stringsorting.c  stringsorting.h
libs_src/union_find/: quickunion.c
